--- a/index.html
+++ b/index.html
@@ -3,181 +3,185 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Top 10 Richest Countries by GDP</title>
+  <title>Aiman Husen | Portfolio</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background: linear-gradient(to right, #a8edea, #fed6e3);
-      color: #333;
-      text-align: center;
       margin: 0;
-      padding: 0;
+      font-family: 'Times New Roman', Times, serif;
+      background-color: #0ea5e9;
+      color: #f1f5f9;
+      text-align: center;
     }
-
+    header {
+      background-color: #1e3a8a;
+      padding: 40px 20px;
+      color: #f8fafc;
+    }
     h1 {
-      background-color: #004aad;
-      color: white;
-      padding: 20px;
-      margin: 0;
+      font-size: 2.5rem;
     }
-
+    p {
+      margin-top: 10px;
+      font-size: 1.1rem;
+    }
     section {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      padding: 30px;
-      gap: 20px;
+      padding: 40px 20px;
     }
-
-    article {
-      background-color: white;
-      border-radius: 15px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-      width: 280px;
-      padding: 15px;
+    figure {
       text-align: center;
-      transition: transform 0.3s;
-      flex: 0 1 280px; /* ensures equal width across all cards */
+      margin: 40px 0;
     }
-
-    article:hover {
-      transform: scale(1.05);
+    figure img {
+      max-height: 400px;
+      border-radius: 10%;
+      border: 3px solid #fff;
+      margin: 0 10px;
     }
-
-    img {
+    .about-text {
+      background-color: rgba(255,255,255,0.1);
+      padding: 20px;
+      max-width: 700px;
+      margin: 10px auto;
+      border-radius: 8px;
+      color: #fff;
+    }
+    .certifications {
+      background-color: #0ea5e9;
+      max-width: 700px;
+      margin: 0 auto 20px;
+      padding: 20px;
+      border-radius: 10px;
+      color: #fff;
+      list-style: none;
+    }
+    .certifications li {
+      margin: 10px 0;
+    }
+    .certificates-container {
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      gap: 20px;
+      margin: 20px 0;
+    }
+    .certificate {
+      flex: 1 1 350px;
+      max-width: 500px;
+      background-color: rgba(255,255,255,0.08);
+      border-radius: 10px;
+      padding: 10px;
+      text-align: center;
+    }
+    .certificate img {
       width: 100%;
       border-radius: 10px;
     }
-
-    h3 {
-      color: #004aad;
-      margin-bottom: 5px;
+    .projects .project-card {
+      background-color: rgba(255,255,255,0.1);
+      padding: 20px;
+      max-width: 700px;
+      margin: 10px auto;
+      border-radius: 8px;
     }
-
-    .gdp {
-      font-weight: bold;
-      color: #e63946;
-      margin-top: 0;
+    a {
+      color: #fff;
+      text-decoration: underline;
     }
-
-    p {
-      font-size: 14px;
-      line-height: 1.4;
-    }
-
-    /* Footer Section */
     footer {
-      background-color: #004aad;
-      color: white;
-      padding: 30px 10px;
-      text-align: center;
-      margin-top: 20px;
+      background-color: #0f172a;
+      color: #cbd5e1;
+      padding: 20px;
+      border-top: 1px solid rgba(255,255,255,0.1);
     }
-
-    .social-links a {
-      color: white;
-      text-decoration: none;
-      margin: 0 12px;
-      font-weight: bold;
-      transition: color 0.3s;
-    }
-
-    .social-links a:hover {
-      color: #ffcc00;
-    }
-
-    small {
-      display: block;
-      margin-top: 15px;
-      color: #ddd;
-      font-size: 0.9em;
-    }
-
   </style>
 </head>
 <body>
-  <h1>🌎 Top 10 Richest Countries by GDP (2025)</h1>
+  <!-- Header -->
+  <header>
+    <h1>Hi, I'm Aiman Husen</h1>
+    <p>Cyber Security Enthusiast & Web Developer in Progress</p>
+  </header>
 
+  <!-- About Me -->
   <section>
-    <article>
-      <img src="https://flagcdn.com/w320/us.png" alt="USA flag">
-      <h3>1. United States</h3>
-      <p class="gdp">GDP: $28.78 Trillion</p>
-      <p>The U.S. leads with a diverse economy driven by technology, finance, healthcare, and exports such as machinery and aircraft.</p>
-    </article>
-
-    <article>
-      <img src="https://flagcdn.com/w320/cn.png" alt="China flag">
-      <h3>2. China</h3>
-      <p class="gdp">GDP: $18.53 Trillion</p>
-      <p>China’s wealth comes from manufacturing, exports like electronics and machinery, and a booming tech industry.</p>
-    </article>
-
-    <article>
-      <img src="https://flagcdn.com/w320/jp.png" alt="Japan flag">
-      <h3>3. Japan</h3>
-      <p class="gdp">GDP: $4.23 Trillion</p>
-      <p>Japan’s strong automotive and electronics sectors contribute majorly to its economic success.</p>
-    </article>
-
-    <article>
-      <img src="https://flagcdn.com/w320/de.png" alt="Germany flag">
-      <h3>4. Germany</h3>
-      <p class="gdp">GDP: $4.42 Trillion</p>
-      <p>Germany’s economy thrives on automobile exports, machinery, and chemical products.</p>
-    </article>
-
-    <article>
-      <img src="https://flagcdn.com/w320/in.png" alt="India flag">
-      <h3>5. India</h3>
-      <p class="gdp">GDP: $4.11 Trillion</p>
-      <p>India earns from IT services, agriculture, and manufacturing industries with a rapidly growing digital sector.</p>
-    </article>
-
-    <article>
-      <img src="https://flagcdn.com/w320/gb.png" alt="UK flag">
-      <h3>6. United Kingdom</h3>
-      <p class="gdp">GDP: $3.59 Trillion</p>
-      <p>The U.K.’s strength lies in finance, pharmaceuticals, and creative industries.</p>
-    </article>
-
-    <article>
-      <img src="https://flagcdn.com/w320/fr.png" alt="France flag">
-      <h3>7. France</h3>
-      <p class="gdp">GDP: $3.13 Trillion</p>
-      <p>France exports luxury goods, aerospace products, and agricultural items worldwide.</p>
-    </article>
-
-    <article>
-      <img src="https://flagcdn.com/w320/br.png" alt="Brazil flag">
-      <h3>8. Brazil</h3>
-      <p class="gdp">GDP: $2.65 Trillion</p>
-      <p>Brazil profits mainly from exports of soybeans, iron ore, and oil.</p>
-    </article>
-
-    <article>
-      <img src="https://flagcdn.com/w320/it.png" alt="Italy flag">
-      <h3>9. Italy</h3>
-      <p class="gdp">GDP: $2.37 Trillion</p>
-      <p>Italy’s economy depends on fashion, automotive exports, and high-end manufacturing.</p>
-    </article>
-
-    <article>
-      <img src="https://flagcdn.com/w320/ca.png" alt="Canada flag">
-      <h3>10. Canada</h3>
-      <p class="gdp">GDP: $2.24 Trillion</p>
-      <p>Canada earns mainly from oil, natural gas, and automotive exports with a strong service sector.</p>
-    </article>
+    <figure>
+      <img src="/img/with train.png" alt="Aiman Standing front of train">
+      <img src="/img/Untitled design.jpg" alt="Aiman photo">
+      <img src="/img/IMG-20241228-WA0096.jpg" alt="Aiman Husen">
+      <figcaption class="about-text">
+        <h2>About Me</h2>
+        I'm Aiman Husen, a web developer in progress and cyber security enthusiast from Bangladesh. I’m passionate about building websites and learning how to protect data from bad actors.
+      </figcaption>
+    </figure>
   </section>
 
-  <footer>
-    <div class="social-links">
-      <a href="https://www.facebook.com/aimanhusen.0" target="_blank">Facebook</a> |
-      <a href="https://www.instagram.com/aimanhusen.0?igsh=YXgzdTRuenY0YW03" target="_blank">Instagram</a> | |
-      <a href="https://x.com/AimanHusen2?t=THZneBigCLGOHINiAvul4g&s=09" target="_blank">Twitter (X)</a> |
-      <a href="https://www.tiktok.com/@aiman_huseen?_t=ZS-90HOFmwycb6&_r=1" target="_blank">Tiktok</a>
+  <!-- Learning & Certifications -->
+  <section style="background-color: rgba(255,255,255,0.08);">
+    <h2>Learning & Certifications</h2>
+    <ul class="certifications">
+      <li>🧠 <strong>Google IT Support Certificate</strong> — Coursera</li>
+      <li>💻 <strong>HTML & CSS Foundations</strong> — freeCodeCamp</li>
+      <li>🔐 <strong>Cybersecurity Fundamentals</strong> — Credly</li>
+    </ul>
+    <div class="certificates-container">
+      <div class="certificate">
+        <img src="/img/emerging tech conv/emerging tech conv 1.jpeg" alt="Explore Emerging Tech">
+        <h3>Explore Emerging Tech</h3>
+        <p>This IBM SkillsBuild certificate recognizes that Aiman Husen successfully completed training on modern and emerging technologies that shape the digital era.</p>
+      </div>
+      <div class="certificate">
+        <img src="/img/IBMDesign20250727-32-fvfewg conv/IBMDesign20250727-32-fvfewg conv 1.jpeg" alt="Cybersecurity Fundamentals">
+        <h3>Cybersecurity Fundamentals</h3>
+        <p>This certificate demonstrates Aiman Husen’s foundational knowledge of cybersecurity concepts, including protection, risk management, and threat awareness.</p>
+      </div>
     </div>
-    <small>© 2025 Created by Aiman Husen | Data Source: IMF & World Bank Estimates</small>
+  </section>
+
+  <!-- Projects -->
+  <section class="projects">
+    <h2>My Projects</h2>
+
+    <div class="project-card">
+      <strong>🌐 Country Info Page</strong>
+      <p>A simple HTML site showing top 10 strongest countries by economy.</p>
+      <a href="/Aiman portfolio/country.html" target="_blank">View Project</a>
+    </div>
+
+    <div class="project-card">
+      <strong>🎬 Top 5 Movies List</strong>
+      <p>A clean and simple web page listing top 5 Satyajit Roy movies using HTML & CSS.</p>
+      <a href="/Aiman portfolio/movie.html" target="_blank">View Project</a>
+    </div>
+
+    <div class="project-card">
+      <strong>💻 Portfolio Website</strong>
+      <p>You're looking at it! Made with pure HTML and inline CSS.</p>
+    </div>
+  </section>
+
+  <!-- Contact -->
+  <div>
+    <a href="https://www.facebook.com/aimanhusen.0" target="_blank" style="text-decoration:none; margin:0 8px;">
+      <img src="/icon/facebook.png" alt="Facebook" height="50">
+    </a>
+    <a href="https://www.instagram.com/aimanhusen.0?igsh=YXgzdTRuenY0YW03" target="_blank" style="text-decoration:none; margin:0 8px;">
+      <img src="/icon/instagram.png" alt="Instagram" height="50">
+    </a>
+    <a href="https://x.com/AimanHusen2?t=THZneBigCLGOHINiAvul4g&s=09" target="_blank" style="text-decoration:none; margin:0 8px;">
+      <img src="/icon/twitter.png" alt="Twitter" height="50">
+    </a>
+    <a href="https://www.tiktok.com/@aiman_huseen?_t=ZS-90HOFmwycb6&_r=1" target="_blank" style="text-decoration:none; margin:0 8px;">
+      <img src="/icon/tiktok.png" alt="TikTok" height="50">
+    </a>
+   <a href="mailto:aimanhusen.official@gmail.com" style="text-decoration:none; margin:0 8px; outline:none; border:none;">
+  <img src="/icon/mail.png" alt="Email" height="50" style="border:none; outline:none;">
+  </a>
+
+  </div>
+
+  <!-- Footer -->
+  <footer>
+    <p>© 2025 Aiman Husen — Made with and pure HTML</p>
   </footer>
 </body>
 </html>
